# AINews

./: .env.example  .gitignore  API_KEYS.md  CLAUDE.md  CONTEXT.md  DEPLOY.md  PROBLEM_SOLUTION_RESULT.md  README.md  ai-pulse-prd-v3.md  docker-compose.dev.yml  docker-compose.yml
.playwright-mcp/: page-2026-06-08T14-05-10-085Z.yml  page-2026-06-08T14-05-18-014Z.yml  page-2026-06-08T14-25-53-525Z.yml  page-2026-06-08T14-25-59-259Z.yml  page-2026-06-08T14-34-31-328Z.yml  page-2026-06-08T14-34-58-866Z.yml  page-2026-06-08T14-35-06-730Z.yml  page-2026-06-08T14-35-25-350Z.yml  page-2026-06-08T14-35-32-222Z.yml  page-2026-06-08T14-37-10-810Z.yml  page-2026-06-08T14-37-23-876Z.yml  page-2026-06-08T14-37-49-280Z.yml  page-2026-06-08T14-38-18-485Z.yml  page-2026-06-08T15-00-14-445Z.yml  page-2026-06-08T15-00-24-970Z.yml  page-2026-06-08T15-00-56-339Z.yml  page-2026-06-08T15-02-50-639Z.yml  page-2026-06-08T15-04-21-067Z.yml  page-2026-06-08T15-05-07-592Z.yml  page-2026-06-08T15-05-25-399Z.yml  page-2026-06-08T15-05-47-614Z.yml  page-2026-06-08T15-06-07-356Z.yml  page-2026-06-08T15-06-21-492Z.yml  page-2026-06-08T15-06-41-046Z.yml  page-2026-06-08T15-07-43-315Z.yml  page-2026-06-08T15-08-20-036Z.yml  page-2026-06-08T15-12-59-261Z.yml  page-2026-06-08T15-31-46-498Z.yml  page-2026-06-08T15-34-28-953Z.yml  page-2026-06-08T15-36-21-573Z.yml  page-2026-06-08T15-38-48-407Z.yml  page-2026-06-08T15-39-46-316Z.yml  page-2026-06-08T15-40-20-995Z.yml  page-2026-06-08T15-41-15-325Z.yml  page-2026-06-09T10-27-12-799Z.yml  page-2026-06-09T10-27-30-141Z.yml  page-2026-06-09T10-31-19-450Z.yml  (+12 more)
backend/: .dockerignore  Dockerfile  Dockerfile.railway  alembic.ini  pyproject.toml  railway.json  requirements-deploy.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_alert_logs.py  0003_add_user_devices.py  0004_add_card_is_published.py
backend/app/: config.py  cookies.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  redis.py
backend/app/models/: __init__.py  batch.py  card.py  user.py  user_device.py
backend/app/routers/: admin.py  alerts.py  auth.py  cards.py  health.py  interactions.py  me.py  push.py  recommendations.py  search.py
backend/app/schemas/: auth.py  cards.py  common.py  search.py
backend/app/services/: admin.py  alerting.py  auth.py  cards.py  interactions.py  push.py  recommendations.py  search.py
backend/app/tasks/: build_cf_model.py  index_card.py
backend/es/: Dockerfile  setup.py
backend/es/mappings/: cards.json
backend/scripts/: seed_demo.py
backend/tests/: test_security.py
pipeline/: Dockerfile  pyproject.toml
pipeline/pipeline/: beat_schedule.py  celery_app.py  db.py
pipeline/pipeline/adapters/: base.py  github.py  github_trending.py  hackernews.py  imap.py  rss.py
pipeline/pipeline/ai/: backtranslate.py  common.py  demo_client.py  news_processor.py  prompts.py  publisher.py  technique_processor.py
pipeline/pipeline/filters/: dedup.py
pipeline/pipeline/models/: batch_log.py  source_health.py
pipeline/pipeline/sources/: common.py  demo_snapshot.py  group_a.py  group_b.py  group_b2.py  group_b3.py  group_b4.py  group_c.py  group_c2.py  group_d.py  group_d2.py
pipeline/pipeline/tasks/: check_source_health.py  orchestrate.py  send_push.py  train_cf.py
pipeline/scripts/: test_run.py
pipeline/tests/: test_refactor_smoke.py
(+85 files in other folders)
