[tool.poetry]
name = "ai-pulse-backend"
version = "0.1.0"
description = "AI Pulse — FastAPI backend"
authors = ["AI Pulse Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
redis = { version = "^5.2.0", extras = ["hiredis"] }
# Bonsai 무료 티어가 OpenSearch만 제공 → opensearch-py (ES 8.x 클라이언트는 OpenSearch 거부)
opensearch-py = { version = "^2.4", extras = ["async"] }
anthropic = "^0.40.0"
authlib = "^1.3.2"
httpx = "^0.27.2"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.19"
celery = { version = "^5.4.0", extras = ["redis"] }
feedparser = "^6.0.11"
sentence-transformers = "^3.3.0"
scikit-learn = "^1.5.2"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
