[tool.poetry]
name = "ai-pulse-pipeline"
version = "0.1.0"
description = "AI Pulse — Celery pipeline worker"
authors = ["AI Pulse Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
celery = { version = "^5.4.0", extras = ["redis"] }
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
redis = { version = "^5.2.0", extras = ["hiredis"] }
anthropic = "^0.40.0"
elasticsearch = { version = "^8.17.0", extras = ["async"] }
feedparser = "^6.0.11"
httpx = "^0.27.2"
sentence-transformers = "^3.3.0"
scikit-learn = "^1.5.2"
langchain = "^0.3.12"
langchain-anthropic = "^0.3.4"
watchdog = "^6.0.0"
imap-tools = "^3.5"
implicit = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
